--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "todo-list-in-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://amankashyap004.github.io/todo-list-in-react/",
   "dependencies": {
     "@hello-pangea/dnd": "^16.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
@@ -15,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
