--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-hive",
+  "name": "task",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://amankashyap004.github.io/task-hive/",
